fixed height for images on safari

--- a/css/style.css
+++ b/css/style.css
@@ -301,6 +301,7 @@ h2{
     }
 .category-rectangle{
     flex-basis:100%;
+    height:25vw;
     width:100%;
     box-sizing:border-box;
     position:relative;
@@ -314,6 +315,7 @@ h2{
     width:50%;
     box-sizing:border-box;
     position:relative;
+    height:25vw;
     background:linear-gradient( to bottom, rgba(0,0,0,0.25) 0%, rgba(0,0,0,0.25) 100% );
     }
 
